objects/CollectionContents__c.object
<CustomObject>
    <description>This object is for UI purposes only. 
It provides a related list on the Collection Perspective Child records for the Program Collection record type to display the associated children. This simplifies navigation when the goal is simply to identify which specific children are represented by a Program Collection when being referenced as a child of another Program Collection.</description>
    <fields>
        <fullName>Collection_Perspective_Child__c</fullName>
        <label>Collection Perspective Child</label>
        <referenceTo>Program_Relationship__c</referenceTo>
        <relationshipLabel>Collection Contents</relationshipLabel>
        <relationshipName>Grandchildren</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Collection_Perspective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collection Perspective</label>
        <referenceTo>Program_Perspective__c</referenceTo>
        <relationshipName>Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>CC{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Effective_end__c</fullName>
        <formula>Related_child__r.Effective_End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective end</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_start__c</fullName>
        <formula>Related_child__r.Effective_Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Collection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Collection</label>
        <referenceTo>Program_Group__c</referenceTo>
        <relationshipName>Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_child__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related child</label>
        <referenceTo>Program_Relationship__c</referenceTo>
        <relationshipLabel>Collection Contents (Related children)</relationshipLabel>
        <relationshipName>Collection_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Collection Contents</label>
    <nameField>
        <label>Collection Contents</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection Contents</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>